<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="principal">Principal</string>
    <string name="servi_os">Serviços</string>
    <string name="clientes1">Clientes</string>
    <string name="contato">Contato</string>
    <string name="sobre">Sobre</string>
    <string name="atm_consultoria">ATM Consultoria</string>
    <string name="atmconsultoria_gmail_com">atmconsultoria@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sistema_de_gest_o_de_qualidade">Sistema de Gestão de Qualidade</string>
    <string name="o_sistema_de_gest_o_da_qualidade_sgq_tem_o_objetivo_de_verificar_todos_os_processos_da_empresa_e_como_esses_processos_podem_melhorar_a_qualidade_dos_produtos_e_servi_os_frente_aos_clientes_nesse_sistema_existem_princ_pios_e_diretrizes_da_qualidade_que_s_o_aplicados_em_cada_processo_do_dia_a_dia_da_institui_o">O Sistema de Gestão da Qualidade (SGQ) tem o objetivo de verificar todos os processos da empresa e como esses processos podem melhorar a qualidade dos produtos e serviços frente aos clientes. Nesse sistema, existem princípios e diretrizes da qualidade que são aplicados em cada processo do dia a dia da instituição.</string>
    <string name="indicadores_de_gest_o">Indicadores de Desenpenho</string>
    <string name="clientes">Clientes</string>
</resources>
